--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ html, body {
 #main {
     width: 100%;
     background-color: black;
+    background-image: url(https://wallpaper.mob.org/image/dark-les-tuman-temnota-mrak-54276.html);
 }
 
 #hero {
