--- a/profile.css
+++ b/profile.css
@@ -19,6 +19,7 @@ html,body{
     width: 100%;
     height: 100vh;
     background-color: black;
+    background-image: url('images(1).jpeg');
 }
 
 #nav{
