--- a/profile.css
+++ b/profile.css
@@ -19,7 +19,7 @@ html,body{
     width: 100%;
     height: 100vh;
     background-color: black;
-    background-image: url('images(1).jpeg');
+    background-image: url(images (1).jpeg);
 }
 
 #nav{
@@ -102,7 +102,7 @@ html,body{
     height: 25px;
     display: flex;
     border-radius: 50%;
-    background-color: #888;
+    background-image: url(images (1).jpeg);
     align-items: center;
     justify-content: center;
 }
@@ -110,7 +110,7 @@ html,body{
 #second{
     width: 100%;
     height: 100vh;
-    background-color: black;
+    background-image: url(images (1).jpeg);
     padding-top: 100px;
     color: #fff;
     padding-right: 5vw;
@@ -152,7 +152,7 @@ html,body{
     align-items: center;
     gap: 40px;
     width: 100%;
-    background-color: black;
+    background-image: url(images (1).jpeg);
 }
 
 #textabout{
@@ -189,7 +189,7 @@ html,body{
 #subscribe{
     color: white;
     padding: 20px 30px;
-    background-color: black;
+    background-image: url(images (1).jpeg);
     padding-bottom: 10vw;
 }
 
